--- a/cvat-ui/src/components/cloud-storages-page/styles.scss
+++ b/cvat-ui/src/components/cloud-storages-page/styles.scss
@@ -57,7 +57,6 @@
 .cvat-cloud-storages-list {
     display: flex;
     flex-wrap: wrap;
-    height: 100%;
     overflow-y: auto;
 
     > div {
