--- a/cvat-ui/src/components/jobs-page/styles.scss
+++ b/cvat-ui/src/components/jobs-page/styles.scss
@@ -161,7 +161,6 @@
         display: flex;
         flex-wrap: wrap;
         overflow-y: auto;
-        height: 100%;
 
         > div {
             width: 100%;
