--- a/cvat-ui/src/components/models-page/styles.scss
+++ b/cvat-ui/src/components/models-page/styles.scss
@@ -25,7 +25,6 @@
 .cvat-models-list {
     display: flex;
     flex-wrap: wrap;
-    height: 100%;
     overflow-y: auto;
 
     > div {
