--- a/cvat-ui/src/components/projects-page/styles.scss
+++ b/cvat-ui/src/components/projects-page/styles.scss
@@ -194,7 +194,6 @@
 }
 
 .cvat-projects-list {
-    height: 100%;
     overflow-y: auto;
     display: flex;
     flex-wrap: wrap;
