--- a/cvat-ui/src/components/tasks-page/styles.scss
+++ b/cvat-ui/src/components/tasks-page/styles.scss
@@ -55,7 +55,6 @@
 }
 
 .cvat-tasks-list {
-    height: 100%;
     overflow-y: auto;
 
     .ant-ribbon-wrapper {
